--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-responsive-modal": "^6.0.1",
