--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.3.0",
     "formik": "^2.2.6",
     "gh-pages": "^3.1.0",
+    "hamburger-react": "^2.4.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
